--- a/app/src/main/assets/overlays/com.android.systemui/res/values/styles.xml
+++ b/app/src/main/assets/overlays/com.android.systemui/res/values/styles.xml
@@ -51,4 +51,8 @@
         <item name="android:windowIsFloating">true</item>
         <item name="android:homeAsUpIndicator">@*com.android.systemui:drawable/ic_arrow_back</item>
     </style>
+
+    <style name="QSHeaderTheme" parent="@*android:style/Theme.DeviceDefault.QuickSettings">
+        <item name="android:colorForeground">@android:color/white</item>
+    </style>
 </resources>
