--- a/app/src/main/assets/overlays/com.android.systemui/res/drawable/brightness_progress_drawable.xml
+++ b/app/src/main/assets/overlays/com.android.systemui/res/drawable/brightness_progress_drawable.xml
@@ -17,20 +17,20 @@
     <item android:id="@*android:id/background"
         android:gravity="center_vertical|fill_horizontal">
         <shape android:shape="rectangle"
-            android:tint="@android:color/white">
-            <size android:height="@*com.android.systemui:dimen/seek_bar_height" />
-            <solid android:color="@*com.android.systemui:color/white_disabled" />
-            <corners android:radius="@*com.android.systemui:dimen/seek_bar_corner_radius" />
+            android:tint="@*android:color/white">
+            <size android:height="3dp" />
+            <solid android:color="@*android:color/white_disabled_material" />
+            <corners android:radius="0dp" />
         </shape>
     </item>
     <item android:id="@*android:id/progress"
         android:gravity="center_vertical|fill_horizontal">
         <scale android:scaleWidth="100%">
             <shape android:shape="rectangle"
-                android:tint="@android:color/white">
-                <size android:height="@*com.android.systemui:dimen/seek_bar_height" />
-                <solid android:color="@android:color/white" />
-                <corners android:radius="@*com.android.systemui:dimen/seek_bar_corner_radius" />
+                android:tint="@*android:color/white">
+                <size android:height="3dp" />
+                <solid android:color="@*android:color/white" />
+                <corners android:radius="0dp" />
             </shape>
         </scale>
     </item>
