--- a/app/src/main/assets/overlays/com.android.systemui/res/drawable/qs_detail_background.xml
+++ b/app/src/main/assets/overlays/com.android.systemui/res/drawable/qs_detail_background.xml
@@ -17,7 +17,7 @@ Copyright (C) 2014 The Android Open Source Project
     <item>
         <inset>
             <shape>
-                <solid android:color="@*com.android.systemui:color/qs_detail_transition"/>
+                <solid android:color="#66FFFFFF"/>
                 <corners android:radius="?android:attr/dialogCornerRadius" />
             </shape>
         </inset>
