--- a/app/src/main/assets/overlays/com.android.systemui/res/drawable/qs_footer_drag_handle.xml
+++ b/app/src/main/assets/overlays/com.android.systemui/res/drawable/qs_footer_drag_handle.xml
@@ -13,25 +13,14 @@
      See the License for the specific language governing permissions and
      limitations under the License.
 -->
-<!--  ic_expand_more_inverse.xml -->
-<inset xmlns:android="http://schemas.android.com/apk/res/android"
-    android:insetTop="-8dp"
-    android:insetBottom="-8dp"
-    android:insetLeft="2dp"
-    android:insetRight="2dp">
-    <vector xmlns:android="http://schemas.android.com/apk/res/android"
-        android:width="20dp"
-        android:height="20dp"
-        android:viewportWidth="24"
-        android:viewportHeight="24"
-        android:tint="@android:color/white">
+<shape
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:shape="rectangle" >
+    <solid
+        android:color="#00000000" />
+    <corners android:radius="2dp" />
+</shape>
 
-        <path
-            android:fillColor="@android:color/white"
-            android:pathData="M16.59,8.59L12.0,13.17 7.41,8.59 6.0,10.0l6.0,6.0 6.0,-6.0z"/>
-
-    </vector>
-</inset>
 
 
 
